--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -29,20 +29,5 @@ jobs:
             exit 1
           fi
 
-      - name: Install Libraries
-        run: |
-          sudo apt-get update
-          sudo apt install -y bison build-essential cmake flex git libedit-dev \
-              libllvm8 llvm-8-dev libclang-8-dev libllvm9 llvm-9-dev libclang-9-dev \
-              python zlib1g-dev libelf-dev libtinfo5 libfl-dev
-          git clone https://github.com/iovisor/bcc.git
-          mkdir bcc/build; cd bcc/build
-          cmake ..
-          make
-          sudo make install
-
-      - name: Run Tests
-        run: make test
-
       - name: Build Tracee
-        run: make build
+        run: make build-docker
