--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -30,7 +30,7 @@ jobs:
           fi
 
       - name: Build Tracee
-        run: make build DOCKER=1
+        run: make all DOCKER=1
   
   test:
     runs-on: ubuntu-20.04
