add support for rego signatures

--- a/tracee-rules/Makefile
+++ b/tracee-rules/Makefile
@@ -1,23 +1,31 @@
 .PHONY: all
-all: build plugins
+all: build rules
 
 OUT_DIR ?= dist
 OUT_BIN := $(OUT_DIR)/tracee-rules
+OUT_RULES := $(OUT_DIR)/rules
 GO_SRC := $(shell find . -type f -name '*.go')
-PLUGINS_DIR ?= signatures/golang
-PLUGINS_SRC := $(shell find $(PLUGINS_DIR) -type f -name '*.go')
-OUT_PLUGINS := $(OUT_DIR)/rules/builtin.so
+GOSIGNATURES_DIR ?= signatures/golang
+GOSIGNATURES_SRC := $(shell find $(GOSIGNATURES_DIR) -type f -name '*.go')
+OUT_GOSIGNATURES := $(OUT_RULES)/builtin.so
+REGO_SIGNATURES_DIR ?= signatures/rego
+REGO_SIGNATURES_SRC := $(shell find $(REGO_SIGNATURES_DIR) -type f -name '*.rego')
+
+$(OUT_RULES):
+	mkdir -p $@
 
 .PHONY: build
 build: $(filter-out *_test.go,$(GO_SRC))
 	go build -o $(OUT_BIN)
 
-plugins: $(PLUGINS_DIR)
-	go build -buildmode=plugin -o $(OUT_PLUGINS) $(PLUGINS_SRC)
+.PHONY: rules
+rules: $(GOSIGNATURES_DIR) $(REGO_SIGNATURES_SRC) | $(OUT_RULES)
+	#go build -buildmode=plugin -o $(OUT_GOSIGNATURES) $(PLUGINS_SRC)
+	cp $(REGO_SIGNATURES_SRC) $(OUT_RULES)
 	
 .PHONY: test
 test: $(GO_SRC)
-	cd $(PLUGINS_DIR) && go test -v
+	go test -v ./...
 
 .PHONY: clean
 clean:
