--- a/.github/workflows/pr-rules.yaml
+++ b/.github/workflows/pr-rules.yaml
@@ -25,12 +25,11 @@ jobs:
             gofmt -s -d .
             exit 1
           fi
-      - name: yaml-lint
-        uses: ibiqlik/action-yamllint@v3
-
-      - name: Set up Docker Buildx
-        id: buildx
+      - name: setting buildxs
         uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
 
       - name: Cache Docker layers
         uses: actions/cache@v2
@@ -43,10 +42,13 @@ jobs:
       - name: Build tracee-builder
         uses: docker/build-push-action@v2
         with:
-          context: .
+          push: false
           file: ./Dockerfile.builder
           load: true
           tags: tracee-builder:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
       - name: Build 
         run: make build
       - name: Build signatures
