--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -5,13 +5,15 @@ on:
       - "tracee-ebpf/**"
 jobs:
   build:
+    runs-on: ubuntu-20.04
     defaults:
       run:
         working-directory: tracee-ebpf
-    runs-on: ubuntu-20.04
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Lint
         run: |
           if test -z "$(gofmt -l .)"; then
@@ -25,6 +27,9 @@ jobs:
         run: make all DOCKER=1
   test:
     runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: tracee-ebpf
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
