fix: Move example sigs into own dir and exclude from build. (#523)
* fix: Move example sigs into own dir and exclude from build.

Signed-off-by: Simarpreet Singh <simar@linux.com>

* fix: Update Readme.md for signatures

Signed-off-by: Simarpreet Singh <simar@linux.com>

* fix: Fix example pacakge to main

Signed-off-by: Simarpreet Singh <simar@linux.com>

* fix: Safer find expressions.

Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/tracee-rules/Makefile
+++ b/tracee-rules/Makefile
@@ -6,10 +6,10 @@ OUT_BIN := $(OUT_DIR)/tracee-rules
 OUT_RULES := $(OUT_DIR)/rules
 GO_SRC := $(shell find . -type f -name '*.go')
 GOSIGNATURES_DIR ?= signatures/golang
-GOSIGNATURES_SRC := $(shell find $(GOSIGNATURES_DIR) -type f -name '*.go' ! -name '*_test.go')
+GOSIGNATURES_SRC := $(shell find $(GOSIGNATURES_DIR) -type f -name '*.go' ! -name '*_test.go' ! -path '$(GOSIGNATURES_DIR)/examples/*')
 OUT_GOSIGNATURES := $(OUT_RULES)/builtin.so
 REGO_SIGNATURES_DIR ?= signatures/rego
-REGO_SIGNATURES_SRC := $(shell find $(REGO_SIGNATURES_DIR) -type f -name '*.rego' ! -name '*_test.rego')
+REGO_SIGNATURES_SRC := $(shell find $(REGO_SIGNATURES_DIR) -type f -name '*.rego' ! -name '*_test.rego' ! -path '$(REGO_SIGNATURES_DIR)/examples/*')
 
 $(OUT_DIR):
 	mkdir -p $@
