feat: Add OPA tests to Github Actions
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/.github/workflows/pr-rules.yaml
+++ b/.github/workflows/pr-rules.yaml
@@ -29,5 +29,10 @@ jobs:
         run: make build
       - name: Build signatures
         run: make rules
-      - name: Test
+      - name: Run Unit Tests
         run: make test
+      - name: Run OPA Tests
+        uses: petroprotsakh/opa-test-action@v2.1
+        with:
+          tests: "tracee-rules/"
+          options: "--verbose --ignore='examples'"
