feat: Add a Dockerfile.builder for testing pr-rules
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/.github/workflows/pr-rules.yaml
+++ b/.github/workflows/pr-rules.yaml
@@ -30,4 +30,4 @@ jobs:
       - name: Build signatures
         run: make rules
       - name: Run Tests
-        run: make test
+        run: make test DOCKER=1
