Fix "make clean"
Fix "make clean".
 - Use '-C' rather than '-c' to enter subdirectory
 - Check for existence of files before reading from them, fixes empty
 args to docker rmi.

Document Gnu Make 4.3 or better is required, Makefiles uses grouped targets.

Signed-off-by: Icarus Sparry <Icarus Sparry tracee@icarus.freeuk.com>

--- a/tracee-ebpf/Makefile
+++ b/tracee-ebpf/Makefile
@@ -145,7 +145,10 @@ mostlyclean:
 
 .PHONY: clean
 clean:
-	-$(CMD_DOCKER) rmi $(file < $(docker_builder_file))
+	-FILE="$(docker_builder_file)" ; \
+	if [ -r "$$FILE" ] ; then \
+		$(CMD_DOCKER) rmi "$$(< $$FILE)" ; \
+	fi
 	-rm -rf dist $(OUT_DIR)
 	$(MAKE) -C $(LIBBPF_SRC) clean
 
