--- a/tracee-rules/Makefile
+++ b/tracee-rules/Makefile
@@ -51,7 +51,10 @@ endif
 
 .PHONY: clean mostlyclean
 clean mostlyclean:
-	-$(CMD_DOCKER) rmi $(file < $(docker_builder_file))
+	-FILE="$(docker_builder_file)" ; \
+	if [ -r "$$FILE" ] ; then \
+		$(CMD_DOCKER) rmi "$$(< $$FILE)" ; \
+	fi
 	-rm -rf $(OUT_DIR)
 
 # docker_builder_make runs a make command in the tracee-builder container
