--- a/tracee-ebpf/Makefile
+++ b/tracee-ebpf/Makefile
@@ -145,10 +145,13 @@ mostlyclean:
 
 .PHONY: clean
 clean:
-	-$(CMD_DOCKER) rmi $(file < $(docker_builder_file))
+	-FILE="$(docker_builder_file)" ; \
+	if [ -r "$$FILE" ] ; then \
+		$(CMD_DOCKER) rmi "$$(< $$FILE)" ; \
+	fi
 	-rm -rf dist $(OUT_DIR)
 	$(MAKE) -C $(LIBBPF_SRC) clean
-	
+
 check_%:
 	@command -v $* >/dev/null || (echo "missing required tool $*" ; false)
 
