--- a/.github/workflows/mkdocs-latest.yaml
+++ b/.github/workflows/mkdocs-latest.yaml
@@ -23,6 +23,10 @@ jobs:
           pip install mkdocs-macros-plugin
         env:
           GH_TOKEN: ${{ secrets.ORG_GITHUB_TOKEN }}
+      - name: Setup Git
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
       - name: Deploy the latest documents
         run: |
           VERSION=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")
