--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,41 +7,21 @@ repo_url: https://github.com/aquasecurity/tracee
 edit_uri: ""
 
 nav:
-  - Overview: index.md
-  - Getting Started:
-    - Overview: prerequisites.md
-    - Quickstart: quickstart.md
-    - Rules: rule.md
-    - Integrations: integrations.md
-    - Setup Options: options.md
-  - Tracee-eBPF:
-    - Overview: ebpf/index.md
-    - Getting started:
-      - Overview: ebpf/prerequisites.md
-      - Quickstart with Docker: ebpf/quickstart.md
-      - Getting Tracee-eBPF: ebpf/tracee-ebpf.md
-      - Setup Options: ebpf/options.md
-      - Docker for MAC: ebpf/docker-mac.md
-    - Using Tracee:
-      - Overview: ebpf/using.md
-      - Understanding the Output: ebpf/understanding.md
-      - Customizing the Output: ebpf/customizing.md
-      - Selecting What to Trace: ebpf/select.md
-      - Capturing Artifacts: ebpf/capture.md
-    - Secure Tracing: ebpf/secure-tracing.md
-  - Tracee Rules:
-    - Overview: rules/index.md
-    - Prerequisites: rules/prerequisites.md
-    - Integrations: rules/integrations.md
-    - Rules:
-      - Overview: rules/rules.md
-      - Rego Rules: rules/rego.md
-      - Go Rules: rules/go.md
-  - libbpfgo:
-    - Overview: libbpfgo/index.md
-    - Installation: libbpfgo/install.md
-    - Concepts: libbpfgo/concepts.md
-    - Examples: libbpfgo/examples.md
+  - Getting Started: index.md
+  - Installation:
+    - Prerequisites: install/prerequisites.md
+    - eBPF Compilation: install/ebpf-compilation.md
+    - Linux Headers: install/headers.md
+  - Integrations: integrations.md
+  - Configuration Options: config.md
+  - Rules Authoring: rules-authoring.md
+  - Rules Index: rules-index.md
+  - FAQ: faq.md
+  - Tracing:
+    - Getting Started: tracee-ebpf/index.md
+    - Output Options: tracee-ebpf/output.md
+    - Trace Options: tracee-ebpf/trace.md
+    - Capturing Artifacts: tracee-ebpf/capture.md
 
 theme:
     name: material
