--- a/.github/workflows/mkdocs-latest.yaml
+++ b/.github/workflows/mkdocs-latest.yaml
@@ -4,6 +4,9 @@ on:
     tags:
       - "v*"
   workflow_dispatch:
+    inputs:
+      tag:
+        required: false
 jobs:
   deploy:
     name: Deploy the latest documentation
@@ -23,12 +26,15 @@ jobs:
           pip install mike
           pip install mkdocs-macros-plugin
         env:
-          GH_TOKEN: ${{ secrets.ORG_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.MKDOCS_AQUA_BOT }}
       - name: Setup Git
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
       - name: Deploy the latest documents
         run: |
-          VERSION=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")
+          VERSION="${{ github.event.inputs.tag }}" 
+          if [ -z $VERSION ]; then
+            VERSION=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")
+          fi
           mike deploy --push --update-aliases $VERSION latest
