Add initial CO:RE support
This changes the way that tracee reads kernel data structures
so that:

1) If a compile time 'CORE' flag is specified, the bpf_core_read
helper is used which takes into account btf information extracted
from the running kernel.

2) KERN_READ calls are not embedded in one another. This was an
issue because the attribute that the BTF helper requires cannot
be embedded in one another.

This also adds supporting artifacts in the vmlinux.h file which
contains baseline definitions of all kernel structures, and a
header file which contains all macros tracee uses that aren't
defined in the vmlinux.h file.

Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/.github/workflows/pr-ebpf.yaml
+++ b/.github/workflows/pr-ebpf.yaml
@@ -28,5 +28,7 @@ jobs:
           fi
       - name: Build
         run: make all DOCKER=1
+      - name: Build CO:RE
+        run: make all DOCKER=1 CORE=y
       - name: Test
         run: make test DOCKER=1
