fix go rules requirement

--- a/tracee-rules/Makefile
+++ b/tracee-rules/Makefile
@@ -33,7 +33,7 @@ endif
 rules: $(OUT_RULES)
 
 ifndef DOCKER
-$(OUT_RULES): $(GOSIGNATURES_DIR) $(REGO_SIGNATURES_SRC) | $(OUT_DIR)
+$(OUT_RULES): $(GOSIGNATURES_SRC) $(REGO_SIGNATURES_SRC) | $(OUT_DIR)
 	mkdir -p $(OUT_RULES)
 	go build -buildmode=plugin -o $(OUT_GOSIGNATURES) $(GOSIGNATURES_SRC)
 	cp $(REGO_SIGNATURES_SRC) $(OUT_RULES)
