--- a/.github/workflows/pr-rules.yaml
+++ b/.github/workflows/pr-rules.yaml
@@ -25,33 +25,19 @@ jobs:
             gofmt -s -d .
             exit 1
           fi
-      - name: setting buildxs
-        uses: docker/setup-buildx-action@v1
-        id: buildx
+      - uses: actions/cache@v2
         with:
-          install: true
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-go-
 
-      - name: Build tracee-builder
-        uses: docker/build-push-action@v2
-        with:
-          push: false
-          file: ./Dockerfile.builder
-          load: true
-          tags: tracee-builder:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-
-      - name: Build 
-        run: make build
+      - name: Build
+        run: |
+          make build
       - name: Build signatures
         run: make rules
       - name: Run Tests
-        run: make test DOCKER=1
+        run: DOCKER_BUILDKIT=1 make test DOCKER=1
